--- a/Clase 8 - Programacion funcional/practica_guiada.Rmd
+++ b/Clase 8 - Programacion funcional/practica_guiada.Rmd
@@ -24,7 +24,7 @@ Por ejemplo, podemos armar un vector con los path a las bases individuales, con 
 
 ```{r}
 
-bases_individuales_path <- dir_ls(path = '../fuentes/', regexp= 'individual')
+bases_individuales_path <- dir_ls(path = '../Fuentes/', regexp= 'individual')
 bases_individuales_path
 ```
 
@@ -241,8 +241,7 @@ gapminder_nest <- gapminder_unfiltered %>%
   group_by(country) %>% 
   nest()
 
-gapminder_nest %>% 
-  sample_n(10)
+gapminder_nest
 
 ```
 
@@ -252,8 +251,7 @@ gapminder_nest %>%
 gapminder_nest <- gapminder_nest %>% 
   mutate(grafico= map2(.x = data, .y = country,.f =  graficar_pais))
 
-gapminder_nest %>% 
-  sample_n(10)
+gapminder_nest
 ```
 
 Veamos un ejemplo
@@ -266,8 +264,8 @@ gapminder_nest$grafico[2]
 
 Ahora podemos guardar todos los gráficos en un archivo PDF
 
-```{reval=FALSE, message=FALSE, warning=FALSE, include=TRUE}
-pdf('../resultados/graficos_gapminder.pdf')
+```{r eval=FALSE, message=FALSE, warning=FALSE, include=TRUE}
+pdf('../Resultados/graficos_gapminder.pdf')
 gapminder_nest$grafico
 dev.off()
 ```
