--- a/Clase 3 - Tidyverse - Tasas basicas/Clase 3 - Bases de Datos y Mercado de Trabajo.Rmd
+++ b/Clase 3 - Tidyverse - Tasas basicas/Clase 3 - Bases de Datos y Mercado de Trabajo.Rmd
@@ -21,213 +21,10 @@ Entre ellos usaremos principalmente __dplyr__ y __tidyr__ para realizar transfor
 A continuación cargamos la librería a nuestro ambiente. Para ello debe estar previamente instalada en nuestra pc.
 ```{r, warning=FALSE,message=FALSE}
 library(tidyverse)
+library(openxlsx)
 ```
 
-Para mostrar el funcionamiento básico de tydyverse, crearemos un pequeño set de datos del [Indice de salarios](http://www.indec.gob.ar/bajarCuadroEstadistico.asp?idc=4020B33440609462654542BD0BC320F1523DA0DC52C396201DB4DD5861FFEDC9AD1436681AC84179).
-```{r}
-INDICE  <- c(100,   100,   100,
-             101.8, 101.2, 100.73,
-             102.9, 102.4, 103.2)
-
-FECHA  <-  c("Oct-16", "Oct-16", "Oct-16",
-             "Nov-16", "Nov-16", "Nov-16",
-             "Dic-16", "Dic-16", "Dic-16")
-
-
-GRUPO  <-  c("Privado_Registrado","Público","Privado_No_Registrado",
-             "Privado_Registrado","Público","Privado_No_Registrado",
-             "Privado_Registrado","Público","Privado_No_Registrado")
-
-Datos <- data.frame(INDICE, FECHA, GRUPO)
-
-
-```
-
-
-## Dplyr
-
-El caracter principal para utilizar este paquete es ```%>%``` , _pipe_ (de tubería).
-
-Los ```%>%``` toman el set de datos a su izquierda, y los transforman mediante los comandos a su derecha, en los cuales los elementos de la izquierda están implícitos. Es decír, que una vez específicado el DataFrame con el cual se trabaja, no será necesario nombrarlo nuevamente para referirse a una determinada variable/columna del mismo.
-
-Veamos las principales funciones que pueden utilizarse con la lógica de este paquete:
-
-### filter
-
-Permite filtrar la tabla acorde al cumplimiento de condiciones lógicas
- 
-```{r}
-Datos %>% 
-  filter(INDICE>101 , GRUPO == "Privado_Registrado")
-
-```
-Nótese que en este caso al separar con una  ```,``` las condiciones se exige el cumplimiento de ambas. En caso de desear que se cumpla una sola condición debe utilizarse el caracter ```|```
-```{r}
-Datos %>% 
-  filter(INDICE>101 | GRUPO == "Privado_Registrado")
-```
-
-### rename
-Permite renombrar una columna de la tabla. Funciona de la siguiente manera: 
- ```Data %>% rename( nuevo_nombre = viejo_nombre )``` 
-```{r}
-Datos %>% 
-  rename(Periodo = FECHA)
-```
-Nótese que a diferencia del ejemplo de la función __filter__ donde utilizábamos __==__ para comprobar una condición lógica, en este caso se utiliza sólo un __=__ ya que lo estamos haciendo es _asignar_ un nombre.
-
-### mutate
-Permite agregar una variable a la tabla (especificando el nombre que tomará esta), que puede ser el resultado de operaciones sobre otras variables de la misma tabla.       
-
-En caso de especificar el nombre de una columna existente, el resultado de la operación realizada "sobrescribirá" la información de la columna con dicho nombre
-```{r}
-Datos <- Datos %>% 
-  mutate(Doble=INDICE*2)
-Datos
-```
-
-### case_when
-Permite definir una variable, la cual toma un valor particular para cada condición establecida. En caso de no cumplir ninguna de las condiciones establecidas la variable tomara valor __NA__.         
-Su funcionamiento es el siguiente:      
-```case_when(condicion1 ~ "Valor1",condicion2 ~ "Valor2",condicion3 ~ "Valor3")```
-
-```{r}
-Datos <- Datos %>% 
-  mutate(Caso_cuando = case_when(GRUPO == "Privado_Registrado"   ~ INDICE*2,
-                                 GRUPO == "Público"              ~ INDICE*3,
-                                 GRUPO == "Privado_No_Registrado"~ INDICE*5))
-Datos
-```
-
-### select
-Permite especificar la serie de columnas que se desea conservar de un DataFrame. También pueden especificarse las columnas que se desean descartar (agregándoles un _-_). Muy útil para agilizar el trabajo en bases de datos de gran tamaño.
-```{r}
-Datos2 <- Datos %>% 
-  select(INDICE, FECHA, GRUPO)
-Datos2
-
-Datos <- Datos %>% 
-  select(-c(Doble,Caso_cuando))
-Datos
-```
-
-### arrange
-Permite ordenar la tabla por los valores de determinada/s variable/s. Es útil cuando luego deben hacerse otras operaciones que requieran del ordenamiento de la tabla
-```{r}
-Datos <- Datos %>% 
-  arrange(GRUPO, INDICE)
-Datos
-```
-
-### summarise
-Crea una nueva tabla que resume la información original. Para ello, definimos las variables de resumen y las formas de agregación.
-```{r}
-Datos %>% 
-  summarise(Indprom = mean(INDICE))
-
-```
-
-### group_by
-Esta función permite realizar operaciones de forma agrupada. Lo que hace la función es "separar" a la tabla según los valores de la variable indicada y realizar las operaciones que se especifican a  continuación, de manera independiente para cada una de las "subtablas". En nuestro ejemplo, sería útil para calcular el promedio de los indices por _Fecha_ 
-```{r}
-Datos %>% 
-  group_by(FECHA) %>%
-  summarise(Indprom = mean(INDICE))
-```
-Notese que los ```%>%``` pueden usarse encadenados para realizar numerosos procedimientos sobre un dataframe original.
-Veamos un ejemplo con multiples encadenamietnos
-```{r}
-Encadenado <- Datos %>% 
-  filter(GRUPO == "Privado_Registrado") %>% 
-  rename(Periodo = FECHA) %>% 
-  mutate(Doble = INDICE*2) %>% 
-  select(-INDICE)
-  
-```
-
-## Joins
-
-Otra implementación muy importante del paquete dplyr son las funciones para unir tablas (joins)
-
-
-![fuente: http://rstudio-pubs-static.s3.amazonaws.com/227171_618ebdce0b9d44f3af65700e833593db.html](joins.png)         
-
-###left_join    
-
-Veamos un ejemplo de la función __left_join__ (una de las más utilizadas en la práctica).       
-Para ello crearemos previamente un Dataframe que contenga un Ponderador para cada uno de los Grupos del Dataframe _Datos_. Aprovecharemos el ejemplo para introducir la función __weigthed.mean__, y así calcular un Indice Ponderado.
-
-```{r}
-Ponderadores <- data.frame(GRUPO = c("Privado_Registrado","Público","Privado_No_Registrado"),
-                            PONDERADOR = c(50.16,29.91,19.93))
-Ponderadores
-```
-
-```{r}
-Datos_join <- Datos %>% 
-  left_join(.,Ponderadores, by = "GRUPO")
-Datos_join
-
-Datos_Indice_Gral <- Datos_join %>% 
-  group_by(FECHA) %>% 
-  summarise(Indice_Gral = weighted.mean(INDICE,w = PONDERADOR))
-
-Datos_Indice_Gral
-```
-
-## Tidyr
-
-El paquete tidyr esta pensado para facilitar el emprolijamiento de los datos.
-
-__Gather__ es una función que nos permite pasar los datos de forma horizontal a una forma vertical. 
-
-__spread__ es una función que nos permite pasar los datos de forma vertical a una forma horizontal.
-
-![fuente: http://www.gis-blog.com/data-management-with-r-tidyr-part-1/](spreadVSgather.png)
-
-
-Retomemos el Dataframe original para mostrar como operan estas funciones:
-```{r}
-Datos
-```
-### Gather y Spread
-```{r}
-Datos_Spread <- Datos %>% 
-  spread(.,       # el . llama a lo que esta atras del %>% 
-  key = GRUPO,    #la llave es la variable cuyos valores van a dar los nombres de columnas
-  value = INDICE) #los valores con que se llenan las celdas
-
-Datos_Spread  
-```
-
-```{r}
-##La función opuesta (gather) nos permite obtener un dataframe como el original partiendo de un dataframe como el recién construido.
-  
-Datos_gather <- Datos_Spread %>%  
-  gather(.,         # el . llama a lo que esta atras del %>% 
-   key   = GRUPO,   # como se llamará la variable que toma los nombres de las columnas 
-   value = INDICE,  # como se llamará la variable que toma los valores de las columnas
-   2:4)             #le indico que columnas juntar
-
-Datos_gather
-```
-
-# Tasas del Mercado de Trabajo
-Luego de abordar las principales funciones necesarias para operar sobre las bases de datos, trabajaremos a continuación con la base del 1er Trimestre de 2017 de la EPH. El ejercicio principal consistirá en calcular la __tasa de empleo__, definida como:            
-
-- Tasa de empleo:  $\frac{Ocupados}{Población}$ 
-      
-Una vez alcanzado dicho resultado, se extenderá el ejercicio hacia el __conjunto de tasas básicas__ presentadas en los Cuadros 1.1 y 1.2, del [Informe técnico elaborado por EPH-INDEC](http://www.indec.gob.ar/uploads/informesdeprensa/EPH_cont_1trim17.pdf). Por último se realizará una modificación para calcular al mismo tiempo las tasas básicas de __2 trimestres consecutivos__. 
-
-En la carpeta de _FUENTES_ del curso, se encuentra el archivo  *"EPH_Registro"* que contiene las codificación de cada una de las variables de la base, y el archivo *"EPH_Concpetos_Actividad"* que contiene las definiciones de los Estados ocupacionales a partir de los cuales se construyen las tasas básicas.   
-
-Cargamos la librería que usaremos para leer y escribir archivos en excel. 
-```{r, message=FALSE, warning=FALSE}
-library(openxlsx) 
-```
-
-
-#### Carga de Informacion
+## Carga de Informacion
 
 La función __list.files__ nos permite observar los archivos que contiene una determinada carpeta             
 
@@ -250,6 +47,192 @@ Individual_t117 <-
 Aglom <- read.xlsx("../Fuentes/Aglomerados EPH.xlsx")
 ```
 
+
+Para mostrar el funcionamiento básico de tydyverse, crearemos un pequeño subset de datos de la base Individual de la EPH. A partir del lenguaje base, especificaremos conservar las primeras 5000 filas, y una serie de variables de interés, tales como los Códigos identificadorios de las vivindas, hogares y componentes, así como las variables de sexo, edad, y la ponderación.
+```{r}
+Datos  <- Individual_t117[1:5000,
+                          c("CODUSU","NRO_HOGAR",
+                                  "COMPONENTE","AGLOMERADO","CH04","CH06","PONDERA")]
+
+```
+Téngase en cuenta que los resultados de estos ejercicios no serán representativos dado que se trata de un recorte de la base.
+
+## Dplyr
+
+El caracter principal para utilizar este paquete es ```%>%``` , _pipe_ (de tubería).
+
+Los ```%>%``` toman el set de datos a su izquierda, y los transforman mediante los comandos a su derecha, en los cuales los elementos de la izquierda están implícitos. Es decír, que una vez específicado el DataFrame con el cual se trabaja, no será necesario nombrarlo nuevamente para referirse a una determinada variable/columna del mismo.
+
+Veamos las principales funciones que pueden utilizarse con la lógica de este paquete:
+
+### filter
+
+Permite filtrar la tabla acorde al cumplimiento de condiciones lógicas
+ 
+```{r}
+Datos %>% 
+  filter(CH04==1 , CH06>=50)
+
+```
+Nótese que en este caso al separar con una  ```,``` las condiciones se exige el cumplimiento de ambas. En caso de desear que se cumpla al menos una  condición debe utilizarse el caracter ```|```
+```{r}
+Datos %>% 
+    filter(CH04==1| CH06>=50)
+
+```
+
+### rename
+Permite renombrar una columna de la tabla. Funciona de la siguiente manera: 
+ ```Data %>% rename( nuevo_nombre = viejo_nombre )``` 
+```{r}
+Datos <- Datos %>% 
+  rename(EDAD = CH06)
+Datos
+```
+Nótese que a diferencia del ejemplo de la función __filter__ donde utilizábamos __==__ para comprobar una condición lógica, en este caso se utiliza sólo un __=__ ya que lo estamos haciendo es _asignar_ un nombre.
+
+### mutate
+Permite agregar una variable a la tabla (especificando el nombre que tomará esta), que puede ser el resultado de operaciones sobre otras variables de la misma tabla.       
+
+En caso de especificar el nombre de una columna existente, el resultado de la operación realizada "sobrescribirá" la información de la columna con dicho nombre
+```{r}
+Datos <- Datos %>% 
+  mutate(Edad_Cuadrado=EDAD^2)
+Datos
+```
+
+### case_when
+Permite definir una variable, la cual toma un valor particular para cada condición establecida. En caso de no cumplir ninguna de las condiciones establecidas la variable tomara valor __NA__.         
+Su funcionamiento es el siguiente:      
+```case_when(condicion1 ~ "Valor1",condicion2 ~ "Valor2",condicion3 ~ "Valor3")```
+
+```{r}
+Datos <- Datos %>% 
+  mutate(Grupos_Etarios = case_when(EDAD  < 18   ~ "Menores",
+                                 EDAD  %in%  18:65   ~ "Adultos",
+                                 EDAD  > 65   ~ "Adultos Mayores"))
+Datos
+```
+
+### select
+Permite especificar la serie de columnas que se desea conservar de un DataFrame. También pueden especificarse las columnas que se desean descartar (agregándoles un _-_). Muy útil para agilizar el trabajo en bases de datos de gran tamaño.
+```{r}
+Datos %>% 
+  select(CODUSU,PONDERA)
+
+
+Datos %>% 
+  select(-c(PONDERA,EDAD))
+
+```
+
+### arrange
+Permite ordenar la tabla por los valores de determinada/s variable/s. Es útil cuando luego deben hacerse otras operaciones que requieran del ordenamiento de la tabla
+```{r}
+Datos <- Datos %>% 
+  arrange(CH04,EDAD)
+Datos
+```
+
+### summarise
+Crea una nueva tabla que resume la información original. Para ello, definimos las variables de resumen y las formas de agregación.
+```{r}
+Datos %>% 
+  summarise(Edad_prom = mean(EDAD),
+            Edad_prom_pond = weighted.mean(EDAD,PONDERA))
+
+```
+
+### group_by
+Esta función permite realizar operaciones de forma agrupada. Lo que hace la función es "separar" a la tabla según los valores de la variable indicada y realizar las operaciones que se especifican a  continuación, de manera independiente para cada una de las "subtablas". En nuestro ejemplo, sería útil para calcular el promedio de edad según  _sexo_ 
+```{r}
+Datos %>% 
+  group_by(CH04) %>%
+  summarise(Edad_Prom = weighted.mean(EDAD,PONDERA))
+```
+Notese que los ```%>%``` pueden usarse encadenados para realizar numerosos procedimientos sobre un dataframe original.
+Veamos un ejemplo con multiples encadenamietnos
+```{r}
+Encadenado <- Datos %>% 
+  filter(Grupos_Etarios == "Adultos") %>% 
+  rename(Codigo = CODUSU) %>% 
+  mutate(Sexo = case_when(CH04 == 1 ~ "Varon",
+                          CH04 == 2 ~ "Mujer")) %>% 
+  select(-Edad_Cuadrado)
+  
+Encadenado
+```
+
+## Joins
+
+Otra implementación muy importante del paquete dplyr son las funciones para unir tablas (joins)
+
+
+![fuente: http://rstudio-pubs-static.s3.amazonaws.com/227171_618ebdce0b9d44f3af65700e833593db.html](joins.png)         
+
+###left_join    
+
+Veamos un ejemplo de la función __left_join__ (una de las más utilizadas en la práctica).       
+Para ello utilizaremos el Dataframe _Aglom_ con los códigos y los nombres de los aglomerados EPH
+```{r}
+Aglom
+```
+
+```{r}
+Datos_join <- Datos %>% 
+  left_join(.,Aglom, by = "AGLOMERADO")
+Datos_join
+
+Poblacion_Aglomerados <- Datos_join %>% 
+  filter(AGLOMERADO != 5) %>% 
+  group_by(Nom_Aglo) %>% 
+  summarise(Varones = sum(PONDERA[CH04==1]),
+            Mujeres = sum(PONDERA[CH04==2]))
+
+Poblacion_Aglomerados
+
+```
+
+## Tidyr
+
+El paquete tidyr esta pensado para facilitar el emprolijamiento de los datos.
+
+__Gather__ es una función que nos permite pasar los datos de forma horizontal a una forma vertical. 
+
+__spread__ es una función que nos permite pasar los datos de forma vertical a una forma horizontal.
+
+![fuente: http://www.gis-blog.com/data-management-with-r-tidyr-part-1/](spreadVSgather.png)
+
+### Gather y Spread
+La función gather nos permite transformar múltiples variables hacia una sola, generando una columna que identificará como categoría lo que antes era una variable. Este tipo de procesamientos será fundamental a la hora de realizar gráficos.
+
+```{r}
+
+Datos_gather <- Poblacion_Aglomerados %>%  
+  gather(.,         # el . llama a lo que esta atras del %>% 
+   key   = Grupo,   # como se llamará la variable que toma los nombres de las columnas 
+   value = Total,  # como se llamará la variable que toma los valores de las columnas
+   2:3)             #le indico que columnas juntar
+
+Datos_gather
+```
+La función spread realiza el procedimiento inverso, y puede ser util para presentar los datos en forma de tabla de manera más prolija.  
+```{r}
+Datos_Spread <- Datos_gather %>% 
+  spread(.,       # el . llama a lo que esta atras del %>% 
+  key = Grupo,    #la llave es la variable cuyos valores van a dar los nombres de columnas
+  value = Total) #los valores con que se llenan las celdas
+
+Datos_Spread  
+```
+
+
+# Tasas del Mercado de Trabajo
+Luego de abordar las principales funciones necesarias para operar sobre las bases de datos, trabajaremos a continuación con toda la base del 1er Trimestre de 2017 de la EPH. El ejercicio principal consistirá en calcular la __tasa de empleo__, definida como:            
+
+- Tasa de empleo:  $\frac{Ocupados}{Población}$ 
+      
+En la carpeta de _FUENTES_ del curso, se encuentra el archivo  *"EPH_Registro"* que contiene las codificación de cada una de las variables de la base, y el archivo *"EPH_Concpetos_Actividad"* que contiene las definiciones de los Estados ocupacionales a partir de los cuales se construyen las tasas básicas.   
 
 ## Tasa de Empleo
 
@@ -280,177 +263,22 @@ Empleo <- Individual_t117 %>%
 Empleo
 ```
 
-Una vez calculada la tasa, incluso podríamos desechar las variables de nivel, para conservar unicamente la tasas
+En caso de querer expresar los resultados como porcentajes, utilizamos la función __sprintf__. Para ello debemos utilizar __mutate__ para transformar la columna Tasa_Empleo
 ```{r}
 Empleo %>% 
-  select(-(1:2))
-```
-## Tásas Básicas - Total Aglomerados 
-
-Con la misma lógica del ejemplo anterior, podemos construir con solo una porción de código adicional el Cuadro 1.1 del [Informe técnico de Mercado de trabajo EPH-INDEC](http://www.indec.gob.ar/uploads/informesdeprensa/EPH_cont_1trim17.pdf). 
-```{r}
-####Cuadro 1.1 Principales indicadores. Total 31 aglomerados u
-
-Cuadro_1.1a <- Individual_t117 %>% 
-  summarise(Poblacion         = sum(PONDERA),
-            Ocupados          = sum(PONDERA[ESTADO == 1]),
-            Desocupados       = sum(PONDERA[ESTADO == 2]),
-            PEA               = Ocupados + Desocupados,
-            Ocupados_demand   = sum(PONDERA[ESTADO == 1 & PP03J ==1]),
-            Suboc_demandante  = sum(PONDERA[ESTADO == 1 & INTENSI ==1 & PP03J==1]),
-            Suboc_no_demand   = sum(PONDERA[ESTADO == 1 & INTENSI ==1 & PP03J %in% c(2,9)]),
-            Subocupados       = Suboc_demandante + Suboc_no_demand ,
-# También podemos llamar a las variables entre comillas, incluyendo nombres compuestos
-# A su vez, podemos utilizar la variable recién creada en la definción de otra varible
-            'Tasa Actividad'                  = PEA/Poblacion,
-            'Tasa Empleo'                     = Ocupados/Poblacion,
-            'Tasa Desocupacion'               = Desocupados/PEA,
-            'Tasa ocupados demandantes'       = Ocupados_demand/PEA,
-            'Tasa Subocupación'               = Subocupados/PEA,
-            'Tasa Subocupación demandante'    = Suboc_demandante/PEA,
-            'Tasa Subocupación no demandante' = Suboc_no_demand/PEA) 
-Cuadro_1.1a 
-```
-
-Una vez que calculamos las tasas, podemos borrar los niveles poblacionales con un __select__
-```{r}
-Cuadro_1.1a <- Cuadro_1.1a %>% 
-  select(-c(1:8))
-
-Cuadro_1.1a
-```
-
-Con __gather__ podemos dar vuelta la tabla para que quede como en la publicación
-
-```{r}
-
-Cuadro_1.1a <- Cuadro_1.1a %>% 
-  gather(Tasas, Valor, 1:ncol(.))
-
-
-Cuadro_1.1a
-```
-
-En caso de querer expresar los resultados como porcentajes, utilizamos la función __sprintf__. Para ello debemos utilizar __mutate__ para transformar la columna Valor.
-```{r}
-Cuadro_1.1a <- Cuadro_1.1a %>% 
-  mutate(Valor = sprintf("%1.1f%%", 100*Valor))
-
-Cuadro_1.1a
+  mutate(Tasa_Empleo_Porc = sprintf("%1.1f%%", 100*Tasa_Empleo))
 ```
 Nótese que en este caso, para poder añadir el %, la función transforma a la variable en un Character, por ende debe tenerse en cuenta que se pierde la información del numero completo.
-
-## Tásas Básicas por Aglomerado 
-
-En este caso, podemos ver que simplemente agregando la función __group_by__ podemos replicar el procedimiento para cada uno de los aglomerados. Y a su vez, podemos realizar en un solo paso los arreglos posteriores sobre nuestra tabla.
-
-```{r}
-Cuadro_1.2a <- Individual_t117 %>% 
-  group_by(AGLOMERADO) %>% 
-  summarise(Poblacion         = sum(PONDERA),
-            Ocupados          = sum(PONDERA[ESTADO == 1]),
-            Desocupados       = sum(PONDERA[ESTADO == 2]),
-            PEA               = Ocupados + Desocupados,
-            Ocupados_demand   = sum(PONDERA[ESTADO == 1 & PP03J == 1]),
-            Suboc_demandante  = sum(PONDERA[ESTADO == 1 & INTENSI == 1 & PP03J == 1]),
-            Suboc_no_demand   = sum(PONDERA[ESTADO == 1 & INTENSI == 1 & PP03J %in% c(2, 9)]),
-            Subocupados       = Suboc_demandante + Suboc_no_demand,
-            'Tasa Actividad'                  = PEA/Poblacion,
-            'Tasa Empleo'                     = Ocupados/Poblacion,
-            'Tasa Desocupacion'               = Desocupados/PEA,
-            'Tasa ocupados demandantes'       = Ocupados_demand/PEA,
-            'Tasa Subocupación'               = Subocupados/PEA,
-            'Tasa Subocupación demandante'    = Suboc_demandante/PEA,
-            'Tasa Subocupación no demandante' = Suboc_no_demand/PEA)
-
-Cuadro_1.2a
-```
-
-
-
-```{r}
-Cuadro_1.2a <- Cuadro_1.2a %>% 
-  select(-c(2:9)) %>%    # Eliminamos las variables de nivel
-  left_join(.,Aglom) %>% # Agregamos el nombre de los aglomerados, que teniamos en otro DF
-  select(Nom_Aglo,everything(.),-AGLOMERADO) #Eliminamos el código de los aglomerados
-
-Cuadro_1.2a
-```
-## Ejercicio para 2 trimestres
-A continuación se detallaran los procedimientos necesarios para realizar apilar las bases de dos o más trimestres y calcular de manera conjunta indicadores para cada uno de ellos.   
-Levantamos la base del 4to Trimestre de 2016
-```{r echo=TRUE}
-Individual_t416 <-
-  read.table("../Fuentes/usu_individual_t416.txt",
-  sep = ";",
-  dec = ",",
-  header = TRUE,
-  fill = TRUE )  
-```
-
-### Select - variables de interés
-Para este tipo de ejercicios, donde el volumen de datos es relativamente grande, puede resultar útil restringir la base a nuestras variables de interés para que el procesamiento no sea tan costoso. Para ello, creando previamente un vector de _strings_ con los nombres de las variables, podemos utilizar de la siguiente manera la función __select__ para quedarnos sólamente con las mismas.
-```{r eval=FALSE, warining = FALSE}
-Variables_interes <- c("ANO4","TRIMESTRE","ESTADO","PONDERA","REGION","AGLOMERADO")
-
-Basesita_t416 <- Individual_t416 %>% select(Variables_interes)
-Basesita_t117 <- Individual_t117 %>% select(Variables_interes)
-
-```
-### bind_rows
-La función __bind_rows__ nos permitirá apilar dos bases de datos en un solo dataframe. La misma evalua los nombres de las variables de cada una de las bases para adjuntar el contenido de ambas en las variables comunes. En caso de que una de las bases tuviera una variable que la otra no, se conservaran dichos datos, quedando como ```NA``` los valores para la otra base.
-```{r warning = FALSE}
-Union_Bases <- bind_rows(Basesita_t416,Basesita_t117)
-##alternativamente
-Union_Bases <- Basesita_t416 %>% 
-  bind_rows(Basesita_t117)
-```
-Una vez que contamos con nuestra unión de las bases de 2 o más trimestres, procederemos a realizar los cálculos que deseamos agrupando por las variables __ANO4__ y __TRIMESTRE__. Esto nos permitirá  realizar estimaciones para sendos períodos al mismo tiempo. Por ejemplo, a continuación tomamos parte del código desarrollado anteriormente para calcular las tasas de Actividad, Empleo, y Desocupación.
-
-```{r echo=TRUE}
-Tasas_dos_trimestres <- Union_Bases %>% 
-  group_by(ANO4,TRIMESTRE) %>% 
-  summarise(Poblacion         = sum(PONDERA),
-            Ocupados          = sum(PONDERA[ESTADO == 1]),
-            Desocupados       = sum(PONDERA[ESTADO == 2]),
-            PEA               = Ocupados + Desocupados,
-            'Tasa Actividad'                  = PEA/Poblacion,
-            'Tasa Empleo'                     = Ocupados/Poblacion,
-            'Tasa Desocupacion'               = Desocupados/PEA) %>% 
-  select(1:2,7:ncol(.))
-
-Tasas_dos_trimestres
-```
 
 
 # Exportar resultados a  Excel
 Como vieramos en la clase 1, la función __write.xlsx__ de la libreria _openxlsx_ nos permite exportar los dos dataframes a un mismo archivo. Cabe aclarar que existen numerosas funciones y librerías alternativas para exportar resultados a un excel. En este caso, optamos por _openxlsx_ ya que resulta una de las más sencillas para exportar rapidamente los resultados. Otras librerías permiten también dar formato a las tablas que se exportan, definir si deseamos sobreescribir archivos en caso de que ya existan, etc. 
 
 ```{r eval=FALSE, warining = FALSE}
-Lista_a_exportar <- list("Cuadro 1.1" = Cuadro_1.1a,
-                      "Cuadro 1.2" = Cuadro_1.2a)
+Lista_a_exportar <- list("Tasa de Empleo" = Empleo,
+                         "Poblacion Aglos" = Poblacion_Aglomerados)
 
 write.xlsx(Lista_a_exportar,"../Resultados/Informe Mercado de Trabajo.xlsx")
 
 ```
-
-
-# Ejercicios para practicar
-
-- Levantar la última base individual de EPH
-- Crear un vector llamado __Variables__ que contenga los nombres de las variables de interés que refieren a las siguientes características:
-      - Edad, Sexo, Ingreso de la ocupación principal, Categoría ocupacional, ESTADO, PONDERA y PONDIH
-- Acotar la Base únicamente a las variables de interés, utilizando el vector __Variables__ 
-
-- Calcular las tasas de actividad, empleo y desempleo según sexo, para jóvenes entre 18 y 35 años
-- Calcular el salario promedio por sexo, para dos grupos de edad: 18 a 35 años y 36 a 70 años. (Recordatorio: La base debe filtrarse para contener únicamente OCUPADOS ASALARIADOS)
-- Grabar los resultados en un excel
-
-# Ejercicios de tarea
-
-- Replicar el cálculo de las tasas logradas en clase para distintos trimestres, levantando las bases desde el segundo trimestre 2016 hasta la última. 
-    - Tips: juntar las bases con el comando ```bind_rows()```
-    - Probar con ```gather()``` y ```spread()``` como quedan mejor los resultados
-    
-- Grabar los resultados en un excel 
 
